--- a/public/act1/visual-firewall-thinger/index.html
+++ b/public/act1/visual-firewall-thinger/index.html
@@ -39,26 +39,26 @@ And yes, finger guns are 100% appropriate for military portraits.">
     <meta itemprop="wordCount" content="274">
     <title>Visual Firewall Thinger :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/visual-firewall-thinger/index.xml" rel="alternate" type="application/rss+xml" title="Visual Firewall Thinger :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1763901482" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1763901482" defer></script>
-    <script src="/js/search-lunr.js?1763901482" defer></script>
-    <script src="/js/search.js?1763901482" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1763902060" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1763902060" defer></script>
+    <script src="/js/search-lunr.js?1763902060" defer></script>
+    <script src="/js/search.js?1763902060" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1763901482";
+      window.relearn.index_js_url="/searchindex.en.js?1763902060";
     </script>
-    <script src="/js/lunr/lunr.min.js?1763901482" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1763901482" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1763901482" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1763901482" defer></script>
+    <script src="/js/lunr/lunr.min.js?1763902060" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1763902060" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1763902060" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1763902060" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763901482" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763901482" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763901482" rel="stylesheet">
-    <link href="/css/theme.css?1763901482" rel="stylesheet">
-    <link href="/css/format-html.css?1763901482" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763902060" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763902060" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763902060" rel="stylesheet">
+    <link href="/css/theme.css?1763902060" rel="stylesheet">
+    <link href="/css/format-html.css?1763902060" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -169,8 +169,8 @@ And yes, finger guns are 100% appropriate for military portraits.">
 
 <h1 id="visual-firewall-thinger">Visual Firewall Thinger</h1>
 
-<p><a href="#R-image-85e738e5e53cf6bad19dab5fd1d95414" class="lightbox-link"><img alt="Chris Elgee" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/chriselgee-avatar.gif" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-85e738e5e53cf6bad19dab5fd1d95414"><img alt="Chris Elgee" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/chriselgee-avatar.gif"></a></p>
+<p><a href="#R-image-f7ebd61c6c3ca2950c4c929428d351d6" class="lightbox-link"><img alt="Chris Elgee" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/chriselgee-avatar.gif" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-f7ebd61c6c3ca2950c4c929428d351d6"><img alt="Chris Elgee" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/chriselgee-avatar.gif"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Find Elgee in the big hotel for a firewall frolic and some techy fun.</p>
@@ -188,23 +188,23 @@ And yes, finger guns are 100% appropriate for military portraits.">
 </blockquote>
 <h2 id="holiday-firewall-simulator">Holiday Firewall Simulator</h2>
 <p>Upon entering the simulator we are presented with a fairly nice GUI. By spending a couple of minutes it is all quite forward what to do. It tells us exactly what to do under the &ldquo;Firewall Configuration Goals&rdquo; section. Let&rsquo;s get cracking!</p>
-<p><a href="#R-image-6506894cfe3a4acbc6af9ea43df364e0" class="lightbox-link"><img alt="The simulator in all its glory" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-6506894cfe3a4acbc6af9ea43df364e0"><img alt="The simulator in all its glory" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-1.png"></a></p>
+<p><a href="#R-image-d91a6e8cbbe1ae6eed6c4f83a40191c0" class="lightbox-link"><img alt="The simulator in all its glory" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-d91a6e8cbbe1ae6eed6c4f83a40191c0"><img alt="The simulator in all its glory" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-1.png"></a></p>
 <p>Clicking on the &ldquo;Internet&rdquo; node in the network drawing we have to enable <code>http</code> and <code>https</code> and click &ldquo;Save Rules&rdquo;.</p>
-<p><a href="#R-image-12867e0394c91b8a04b48d78f1c39ce5" class="lightbox-link"><img alt="Configuring the Internet" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-12867e0394c91b8a04b48d78f1c39ce5"><img alt="Configuring the Internet" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-2.png"></a></p>
+<p><a href="#R-image-57e30eddd6eaec78487224d72439e4ff" class="lightbox-link"><img alt="Configuring the Internet" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-57e30eddd6eaec78487224d72439e4ff"><img alt="Configuring the Internet" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-2.png"></a></p>
 <p>Next, we just tag along enabling <code>HTTPS</code>, <code>HTTP</code> and <code>SSH</code> for the DMZ:</p>
-<p><a href="#R-image-e98c01033578c221d372d13274660786" class="lightbox-link"><img alt="Configuring the DMZ" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-e98c01033578c221d372d13274660786"><img alt="Configuring the DMZ" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-3.png"></a></p>
+<p><a href="#R-image-ef3604559f6887a575bf15e0688f537d" class="lightbox-link"><img alt="Configuring the DMZ" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ef3604559f6887a575bf15e0688f537d"><img alt="Configuring the DMZ" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-3.png"></a></p>
 <p>For the internal network to cloud we enable <code>http</code>, <code>https</code>, <code>smtp</code> and <code>ssh</code>:</p>
-<p><a href="#R-image-582c0cc8d31874f2a2177dead2343dd7" class="lightbox-link"><img alt="Configuring the internal network to cloud" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-4.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-582c0cc8d31874f2a2177dead2343dd7"><img alt="Configuring the internal network to cloud" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-4.png"></a></p>
+<p><a href="#R-image-38a79c84ec00c1dee95debc89ce5468b" class="lightbox-link"><img alt="Configuring the internal network to cloud" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-4.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-38a79c84ec00c1dee95debc89ce5468b"><img alt="Configuring the internal network to cloud" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-4.png"></a></p>
 <p>We aren&rsquo;t quite finished with the internal network yet. We have to configure the connections to the workstations as well. These shall have full access.</p>
-<p><a href="#R-image-79295a3f985e3c5656730bb16fc2a7eb" class="lightbox-link"><img alt="Configuring workstations" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-5.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-79295a3f985e3c5656730bb16fc2a7eb"><img alt="Configuring workstations" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-5.png"></a></p>
+<p><a href="#R-image-8d3c08a5a2826073cfd9e698054c69da" class="lightbox-link"><img alt="Configuring workstations" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-5.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-8d3c08a5a2826073cfd9e698054c69da"><img alt="Configuring workstations" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-5.png"></a></p>
 <p>And Done!</p>
-<p><a href="#R-image-d82cf76fca90eb79c21b390c8c4c3f4b" class="lightbox-link"><img alt="Done" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-6.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d82cf76fca90eb79c21b390c8c4c3f4b"><img alt="Done" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-6.png"></a></p>
+<p><a href="#R-image-807b34e1144f07da202029bc9a281cd3" class="lightbox-link"><img alt="Done" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-6.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-807b34e1144f07da202029bc9a281cd3"><img alt="Done" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-6.png"></a></p>
 <h2 id="chris-elgee-mission-debrief">Chris Elgee mission debrief</h2>
 <blockquote>
 <p>finger guns Nice work! You&rsquo;ve mastered those firewall fundamentals like a true network security pro.</p>
@@ -270,7 +270,7 @@ And yes, finger guns are 100% appropriate for military portraits.">
             <li class="" data-nav-url="/act1/spare-key/index.html"><a class="padding" href="/act1/spare-key/index.html">Spare Key</a></li>
             <li class="" data-nav-url="/act1/the-open-door/index.html"><a class="padding" href="/act1/the-open-door/index.html">The Open Door</a></li>
             <li class="" data-nav-url="/act1/owner/index.html"><a class="padding" href="/act1/owner/index.html">Owner</a></li></ul></li>
-            <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a></li>
+            <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu"></ul></li>
             <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a></li>
           </ul>
         </div>
@@ -289,8 +289,8 @@ And yes, finger guns are 100% appropriate for military portraits.">
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1763901482" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763901482" defer></script>
-    <script src="/js/theme.js?1763901482" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1763902060" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763902060" defer></script>
+    <script src="/js/theme.js?1763902060" defer></script>
   </body>
 </html>
