--- a/public/act1/holiday-hack-orientation/index.html
+++ b/public/act1/holiday-hack-orientation/index.html
@@ -31,26 +31,26 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
     <meta itemprop="wordCount" content="240">
     <title>Holiday Hack Orientation :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/holiday-hack-orientation/index.xml" rel="alternate" type="application/rss+xml" title="Holiday Hack Orientation :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1763901482" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1763901482" defer></script>
-    <script src="/js/search-lunr.js?1763901482" defer></script>
-    <script src="/js/search.js?1763901482" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1763902060" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1763902060" defer></script>
+    <script src="/js/search-lunr.js?1763902060" defer></script>
+    <script src="/js/search.js?1763902060" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1763901482";
+      window.relearn.index_js_url="/searchindex.en.js?1763902060";
     </script>
-    <script src="/js/lunr/lunr.min.js?1763901482" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1763901482" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1763901482" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1763901482" defer></script>
+    <script src="/js/lunr/lunr.min.js?1763902060" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1763902060" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1763902060" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1763902060" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763901482" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763901482" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763901482" rel="stylesheet">
-    <link href="/css/theme.css?1763901482" rel="stylesheet">
-    <link href="/css/format-html.css?1763901482" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763902060" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763902060" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763902060" rel="stylesheet">
+    <link href="/css/theme.css?1763902060" rel="stylesheet">
+    <link href="/css/format-html.css?1763902060" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -161,8 +161,8 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
 
 <h1 id="holiday-hack-orientation">Holiday Hack Orientation</h1>
 
-<p><a href="#R-image-a37ed8eb6c2fe514632be5111fc766a5" class="lightbox-link"><img alt="Lynn Schifano" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/lynnschifano-avatar.gif" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-a37ed8eb6c2fe514632be5111fc766a5"><img alt="Lynn Schifano" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/lynnschifano-avatar.gif"></a></p>
+<p><a href="#R-image-e6e5f0bdb520349e02b65e0fae898605" class="lightbox-link"><img alt="Lynn Schifano" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/lynnschifano-avatar.gif" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-e6e5f0bdb520349e02b65e0fae898605"><img alt="Lynn Schifano" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/lynnschifano-avatar.gif"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Meet Lynn Schifano on the train for a warm welcome and get ready for your journey around the Dosis Neighborhood.</p>
@@ -176,14 +176,14 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
 <hr>
 <p>Hey, think you can give this terminal a try? Just click on it and follow the instructions.</p>
 </blockquote>
-<p><a href="#R-image-78bf13b99f1a656e5b8748471da1f445" class="lightbox-link"><img alt="Talking to Lynn Schifano on the train" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-78bf13b99f1a656e5b8748471da1f445"><img alt="Talking to Lynn Schifano on the train" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-1.png"></a></p>
+<p><a href="#R-image-3b3b57da9c2ca99d25a846da93b9f8b3" class="lightbox-link"><img alt="Talking to Lynn Schifano on the train" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-3b3b57da9c2ca99d25a846da93b9f8b3"><img alt="Talking to Lynn Schifano on the train" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-1.png"></a></p>
 <p>On one of my attempt to grab a screenshot, no character showed up:</p>
-<p><a href="#R-image-f928fbd5baf8e5343753432565151ae9" class="lightbox-link"><img alt="Somehow, no one was there to witness" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f928fbd5baf8e5343753432565151ae9"><img alt="Somehow, no one was there to witness" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-2.png"></a></p>
+<p><a href="#R-image-16da666fe126c174b1d93214cae70bab" class="lightbox-link"><img alt="Somehow, no one was there to witness" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-16da666fe126c174b1d93214cae70bab"><img alt="Somehow, no one was there to witness" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-2.png"></a></p>
 <h2 id="terminal-1">Terminal 1</h2>
-<p><a href="#R-image-c2f512e771cd3c359f9debc44f79e6a8" class="lightbox-link"><img alt="Terminal 1" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c2f512e771cd3c359f9debc44f79e6a8"><img alt="Terminal 1" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-3.png"></a></p>
+<p><a href="#R-image-34def940b0a6378018d078cb3ff970da" class="lightbox-link"><img alt="Terminal 1" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-34def940b0a6378018d078cb3ff970da"><img alt="Terminal 1" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-3.png"></a></p>
 <h2 id="lynn-schifano-mission-debrief">Lynn Schifano mission debrief</h2>
 <blockquote>
 <p>Great work! Please, hop off the train and explore the neighborhood.</p>
@@ -251,7 +251,7 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
             <li class="" data-nav-url="/act1/spare-key/index.html"><a class="padding" href="/act1/spare-key/index.html">Spare Key</a></li>
             <li class="" data-nav-url="/act1/the-open-door/index.html"><a class="padding" href="/act1/the-open-door/index.html">The Open Door</a></li>
             <li class="" data-nav-url="/act1/owner/index.html"><a class="padding" href="/act1/owner/index.html">Owner</a></li></ul></li>
-            <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a></li>
+            <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu"></ul></li>
             <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a></li>
           </ul>
         </div>
@@ -270,8 +270,8 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1763901482" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763901482" defer></script>
-    <script src="/js/theme.js?1763901482" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1763902060" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763902060" defer></script>
+    <script src="/js/theme.js?1763902060" defer></script>
   </body>
 </html>
