--- a/public/search/index.html
+++ b/public/search/index.html
@@ -16,26 +16,26 @@
     <meta property="og:type" content="website">
     <meta itemprop="name" content="Search :: SANS Holiday Hack Challenge 2025">
     <title>Search :: SANS Holiday Hack Challenge 2025</title>
-    <link href="/css/auto-complete/auto-complete.min.css?1763901482" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1763901482" defer></script>
-    <script src="/js/search-lunr.js?1763901482" defer></script>
-    <script src="/js/search.js?1763901482" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1763901820" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1763901820" defer></script>
+    <script src="/js/search-lunr.js?1763901820" defer></script>
+    <script src="/js/search.js?1763901820" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1763901482";
+      window.relearn.index_js_url="/searchindex.en.js?1763901820";
     </script>
-    <script src="/js/lunr/lunr.min.js?1763901482" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1763901482" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1763901482" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1763901482" defer></script>
+    <script src="/js/lunr/lunr.min.js?1763901820" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1763901820" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1763901820" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1763901820" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763901482" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763901482" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763901482" rel="stylesheet">
-    <link href="/css/theme.css?1763901482" rel="stylesheet">
-    <link href="/css/format-html.css?1763901482" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763901820" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763901820" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763901820" rel="stylesheet">
+    <link href="/css/theme.css?1763901820" rel="stylesheet">
+    <link href="/css/format-html.css?1763901820" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -198,7 +198,7 @@
         <div class="R-sidebarmenu R-shortcutmenu-main">
           <ul class="enlarge morespace collapsible-menu">
             <li class="" data-nav-url="/act1/index.html"><a class="padding" href="/act1/index.html">Act 1</a><ul id="R-subsections-8dc0c36ceefa45529ff4cf1f9bdc1f66" class="collapsible-menu"></ul></li>
-            <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a></li>
+            <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu"></ul></li>
             <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a></li>
           </ul>
         </div>
@@ -217,8 +217,8 @@
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1763901482" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763901482" defer></script>
-    <script src="/js/theme.js?1763901482" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1763901820" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763901820" defer></script>
+    <script src="/js/theme.js?1763901820" defer></script>
   </body>
 </html>
